Using user avatars in team listing

--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -1,18 +1,25 @@
 {% extends "prologin/base.html" %}
+{% load i18n %}
+{% load django_bootstrap_breadcrumbs %}
 
-{% block title %}L'équipe {{ year }}{% endblock %}
+{% block breadcrumbs %}
+	{{ block.super }}
+	{% breadcrumb "The association" "" %}
+	{% breadcrumb "Team" "" %}
+	{% breadcrumb year "team:year" year %}
+{% endblock breadcrumbs %}
+
+{% block title %}{% blocktrans %}Team {{ year }}{% endblocktrans %}{% endblock %}
 
 {% block content %}
-<div id="team-select-year" class="navbar">
-	<ul class="nav navbar-nav">
-		{% for team in timeline %}
-		<li{% if team.year == year %} class="active"{% endif %}><a href="{% url 'team:year' team.year %}">{{ team.year }}</a></li>
-		{% endfor %}
-	</ul>
-</div>
+<ul class="pager">
+	{% for team in timeline %}
+	<li{% if team.year == year %} class="active"{% endif %}><a href="{% url 'team:year' team.year %}">{{ team.year }}</a></li>
+	{% endfor %}
+</ul>
 
 <header class="page-header">
-	<h1>L'équipe {{ year }}</h1>
+	<h1>{% blocktrans %}Team {{ year }}{% endblocktrans %}</h1>
 </header>
 
 <div class="row">
@@ -20,7 +27,7 @@
 	<div class="col-xs-6 col-md-4">
 		<div class="media team-member">
 			<div class="media-left">
-				<a href="{% url 'users:profile' member.user.pk %}"><img src="http://lorempixel.com/64/64/people/{{ forloop.counter }}" /></a>
+				<a href="{% url 'users:profile' member.user.pk %}" style="{% if member.user.avatar %}background-image: url('{{ member.user.avatar.url }}'){% endif %}" /></a>
 			</div>
 			<div class="media-body">
 				<h4 class="media-heading"><a href="{% url 'users:profile' member.user.pk %}">{{ member.user.username }}</a> {% if member.user.get_full_name %}<small>{{ member.user.get_full_name }}</small>{% endif %}</h4>
