--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -323,12 +323,17 @@ footer .legal {
 .team-member {
     min-height: 80px;
 }
-.team-member > div > a > img {
+.team-member > div > a {
+    display: inline-block;
     width: 64px;
     height: 64px;
     border-radius: 32px;
+    background-image: url('../img/silhouette.png');
+    background-size: 64px auto;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.3);
 }
-
 
 /*
  * Forms
