--- a/prologin/news/templates/zinnia/_entry_detail_base.html
+++ b/prologin/news/templates/zinnia/_entry_detail_base.html
@@ -1,9 +1,9 @@
 {% load i18n zinnia %}
-<div id="entry-{{ object.pk }}" class="hentry{% if object.featured %} featured{% endif %}">
+<div id="entry-{{ object.pk }}" class="hentry{% if object.featured %} featured{% endif %}" itemscope itemtype="http://schema.org/NewsArticle">
 	{% block entry-header %}
 	<div class="entry-header">
 		{% block entry-title %}
-		<h2 class="entry-title">
+		<h2 class="entry-title" itemprop="headline">
 			<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
 				{{ object.title|widont }}
 			</a>
@@ -26,6 +26,7 @@
 					{% endif %}
 					{% endwith %}
 					<abbr class="published" title="{{ object.creation_date|date:"c" }}">{{ object.creation_date|date:"DATE_FORMAT" }}</abbr>
+					<meta itemprop="datePublished" content="{{ object.creation_date|date:"c" }}" />
 				{% for tag in object.tags_list %}
 					<a href="{% url 'zinnia:tag_detail' tag %}"><span class="label label-default">{{ tag }}</span></a>
 				{% endfor %}
