--- a/prologin/news/templates/zinnia/_entry_detail_base.html
+++ b/prologin/news/templates/zinnia/_entry_detail_base.html
@@ -50,7 +50,7 @@
 				{% if continue_reading %}
 				<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
 					{% endif %}
-					<img src="{{ object.image.url }}" alt="{{ object.title }}" class="left" />
+					<img src="{{ object.image.url }}" alt="{{ object.title }}" class="left" itemprop="image" />
 					{% if continue_reading %}
 				</a>
 				{% endif %}
@@ -59,7 +59,7 @@
 		{% endif %}
 		{% endblock entry-image %}
 		{% block entry-content %}
-		<div class="entry-content">
+		<div class="entry-content" itemprop="articleBody">
 			{{ object_content|safe }}
 		</div>
 		{% endblock entry-content %}
