--- a/prologin/qcm/templates/qcm/display.html
+++ b/prologin/qcm/templates/qcm/display.html
@@ -5,17 +5,18 @@
 	{{ block.super }}
 	{% breadcrumb "Contest" "" %}
 	{% breadcrumb qcm.event.edition.year "" %}
-	{% breadcrumb "Qualification quizz" 'qcm:display' qcm.event.edition.year %}
+    {% breadcrumb "Qualification" '' %} {# TODO #}
+	{% breadcrumb "Quiz" 'qcm:display' qcm.event.edition.year %}
 {% endblock breadcrumbs %}
 
 {% block extra_head %}
     <link href="{% static 'qcm/qcm.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
-{% block title %}{% blocktrans with qcm.event.edition.year as year %}Qualification quizz – Prologin {{ year }}{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans with qcm.event.edition.year as year %}Qualification quiz – Prologin {{ year }}{% endblocktrans %}{% endblock %}
 
 {% block content %}
 
-    <h1>{% blocktrans with qcm.event.edition.year as year %}Qualification quizz – Prologin {{ year }}{% endblocktrans %}</h1>
+    <h1>{% blocktrans with qcm.event.edition.year as year %}Qualification quiz – Prologin {{ year }}{% endblocktrans %}</h1>
 
     <p class="well">
     {% blocktrans %}Please answer the following questions. There is only one correct answer for each question.{% endblocktrans %}<br>
@@ -25,13 +26,13 @@
 {% if not user.is_authenticated %}
     {% url 'users:register' as register %}
     {% url 'users:login' as login %}
-    <p class="alert alert-warning">{% blocktrans with register as register%}You have to <a href="{{ register }}">register</a> or <a href="{{ login }}">log in</a> to be able to fill the quizz.{% endblocktrans %}</p>
+    <p class="alert alert-warning">{% blocktrans with register as register%}You have to <a href="{{ register }}">register</a> or <a href="{{ login }}">log in</a> to be able to fill the quiz.{% endblocktrans %}</p>
 {% endif %}
 
     <form action="" method="POST">
         {% csrf_token %}
 
-        <ol class="qcm">
+        <ol class="mainlist qcm">
             {% for field in form %}
             {% with question=field.field.question %}
             <li class="question">
