--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -2,7 +2,7 @@
 <section class="home-jumbo jumbotron">
 	<div class="container">
 
-		<h1>{% trans "Prologin, le concours national d'informatique." %}</h1>
+		<h1>{% trans "Prologin, the French National Computer Science Contest" %}</h1>
 		<p>{% blocktrans with born_year as born_year %}Born in {{ born_year }} or after? Join the Prologin contest! Registration is free.{% endblocktrans %}</p>
 
 		{# timeline #}
