--- a/prologin/prologin/templates/400.html
+++ b/prologin/prologin/templates/400.html
@@ -5,5 +5,5 @@
 {% block title       %}{% with 400 as number %}{{ block.super }}{% endwith %}{% endblock %}
 
 {% block explanation %}
-<p>{% trans "La requête que vous avez formulée est invalide." %}</p>
+<p>{% trans "The request you have made is invalid or malformed." %}</p>
 {% endblock %}
