--- a/prologin/prologin/templates/403.html
+++ b/prologin/prologin/templates/403.html
@@ -5,5 +5,10 @@
 {% block title       %}{% with 403 as number %}{{ block.super }}{% endwith %}{% endblock %}
 
 {% block explanation %}
-<p>{% trans "Vous n'avez pas l'autorisation d'accéder à cette page." %}</p>
+    {% if user.is_authenticated %}
+        <p>{% blocktrans %}You do not have the permission to access this content.{% endblocktrans %}</p>
+    {% else %}
+        {% url 'users:login' as url %}
+        <p>{% blocktrans %}You do not have the permission to access this content. Try to <a href="{{ url }}">sign in</a>.{% endblocktrans %}</p>
+    {% endif %}
 {% endblock %}
