--- a/prologin/prologin/templates/_error_base.html
+++ b/prologin/prologin/templates/_error_base.html
@@ -4,17 +4,17 @@
 {% block breadcrumbs %}
 	{{ block.super }}
 	{% breadcrumb_for "" %}
-		{% blocktrans %}Erreur {{ number }}{% endblocktrans %}
+		{% blocktrans %}Error {{ number }}{% endblocktrans %}
 	{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block content %}
 
-<h1>{% block title %}{% blocktrans %}Erreur {{ number }}{% endblocktrans %}{% endblock %}</h1>
+<h1>{% block title %}{% blocktrans %}Error {{ number }}{% endblocktrans %}{% endblock %}</h1>
 
 {% block explanation %}{% endblock %}
 
 {% url 'home' as url %}
-<p>{% blocktrans %}Vous pouvez retourner <a href="{{url}}">à l'accueil</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}You can go back to the <a href="{{url}}">home page</a>.{% endblocktrans %}</p>
 
 {% endblock %}
