--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -3,35 +3,35 @@
 	<div class="col-xs-6">
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
-			<li><a href="#TODO">{% trans "L'association" %}</a></li>
-			<li><a href="#TODO">{% trans "Nous contacter" %}</a></li>
+			<li><a href="#TODO">{% trans "The association" %}</a></li>
+			<li><a href="#TODO">{% trans "Contact us" %}</a></li>
 		</ul>
-		<h3>{% trans "En plus" %}</h3>
+		<h3>{% trans "More" %}</h3>
 		<ul class="nav">
-			<li><a href="#TODO">{% trans "Kit de presse" %}</a></li>
+			<li><a href="#TODO">{% trans "Press kit" %}</a></li>
 		</ul>
 	</div>
 	<div class="col-xs-6">
-		<h3>{% trans "Conditions" %}</h3>
+		<h3>{% trans "Terms" %}</h3>
 		<ul class="nav">
-			<li><a href="#TODO">{% trans "Mentions légales" %}</a></li>
-			<li><a href="#TODO">{% trans "Règlement" %}</a></li>
+			<li><a href="#TODO">{% trans "Legal notice" %}</a></li>
+			<li><a href="#TODO">{% trans "Contest rules" %}</a></li>
 		</ul>
-		<h3>{% trans "Suivez-nous !" %}</h3>
-		<a href="{% url 'zinnia:entry_latest_feed' %}" title="{% trans "Flux Atom de news Prologin" %}" class="social">
+		<h3>{% trans "Stay tuned!" %}</h3>
+		<a href="{% url 'zinnia:entry_latest_feed' %}" title="{% trans "Prologin news Atom stream" %}" class="social">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
 				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 			</span>
 		</a>
 		{# social shit #}
-		<a href="https://www.facebook.com/prologin" title="{% trans "Prologin sur Facebook" %}" class="social">
+		<a href="https://www.facebook.com/prologin" title="{% trans "Prologin on Facebook" %}" class="social">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
 				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
 			</span>
 		</a>
-		<a href="https://www.twitter.com/prologin" title="{% trans "Prologin sur Twitter" %}" class="social">
+		<a href="https://www.twitter.com/prologin" title="{% trans "Prologin on Twitter" %}" class="social">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
 				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
