--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -1,7 +1,7 @@
 {% load i18n navigation %}
 <ul class="nav navbar-nav pull-right">
-	<li class="{% active '^about/' %}"><a href="#">{% trans "Découvrir" %}</a></li>
-	<li><a href="{% active '^train/' %}">{% trans "S'entraîner" %}</a></li>
+	<li class="{% active '^about/' %}"><a href="#">{% trans "Discover" %}</a></li>
+	<li><a href="{% active '^train/' %}">{% trans "Train" %}</a></li>
 	<li><a href="{% active '^train/' %}">{% trans "Archives" %}</a></li>
 	<li><a href="{% active '^forum/' %}">{% trans "Forums" %}</a></li>
 	<li class="sep"><a>&nbsp;</a></li>
@@ -9,17 +9,17 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span></a>
 		<ul class="dropdown-menu dropdown-menu-right" role="menu">
-			<li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans "Mon compte" %}</a></li>
+			<li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans "My account" %}</a></li>
 			{% if user.is_staff %}
 			<li><a href="{% url 'admin:index' %}"><i class="fa fa-star"></i> {% trans "Administration" %}</a></li>
 			{% endif %}
 			<li class="divider"></li>
-			<li><a href="{% url 'users:logout' %}"><i class="fa fa-power-off"></i> {% trans "Déconnexion" %}</a></li>
+			<li><a href="{% url 'users:logout' %}"><i class="fa fa-power-off"></i> {% trans "Sign out" %}</a></li>
 		</ul>
 	</li>
 	{% else %}
 	<li class="{% active 'users:login' %}">
-		<a href="{% url 'users:login' %}?next={{ request.get_full_path }}">{% trans "Connexion" %}</a>
+		<a href="{% url 'users:login' %}?next={{ request.get_full_path }}">{% trans "Sign in" %}</a>
 	</li>
 	{% endif %}
 </ul>
