--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -9,7 +9,7 @@
 	{% breadcrumb year "team:year" year %}
 {% endblock breadcrumbs %}
 
-{% block title %}{% blocktrans %}Team {{ year }}{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans %}Staff {{ year }}{% endblocktrans %}{% endblock %}
 
 {% block content %}
 <ul class="pager">
@@ -19,7 +19,7 @@
 </ul>
 
 <header class="page-header">
-	<h1>{% blocktrans %}Team {{ year }}{% endblocktrans %}</h1>
+	<h1>{% blocktrans %}Staff {{ year }}{% endblocktrans %}</h1>
 </header>
 
 <div class="row">
