--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -4,16 +4,16 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Membres" "#TODO" %}
+	{% breadcrumb "Members" "#TODO" %}
 	{% breadcrumb edited_user "users:profile" edited_user.id %}
-	{% breadcrumb "Modifier" "users:edit" edited_user.id %}
-	{% breadcrumb "Mot de passe" "" %}
+	{% breadcrumb "Edit" "users:edit" edited_user.id %}
+	{% breadcrumb "Password" "" %}
 {% endblock breadcrumbs %}
 
-{% block title %}{% blocktrans with edited_user.username as username %}Mot de passe de {{ username }}{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans with edited_user.username as username %}{{ username }}'s password{% endblocktrans %}{% endblock %}
 
 {% block content %}
-<h1>{% blocktrans with edited_user.username as username %}Mot de passe de {{ username }}{% endblocktrans %}</h1>
+<h1>{% blocktrans with edited_user.username as username %}{{ username }}'s password{% endblocktrans %}</h1>
 
 {% include "users/as_staff_warning.html" %}
 
@@ -22,7 +22,7 @@
 	{{ form|bootstrap_horizontal }}
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<input class="btn btn-primary" type="submit" value="{% trans "Enregistrer" %}">
+			<input class="btn btn-primary" type="submit" value="{% trans "Save" %}">
 		</div>
 	</div>
 </form>
