--- a/prologin/prologin/templates/500.html
+++ b/prologin/prologin/templates/500.html
@@ -5,6 +5,6 @@
 {% block title       %}{% with 500 as number %}{{ block.super }}{% endwith %}{% endblock %}
 
 {% block explanation %}
-<p>{% trans "Une erreur interne au serveur est survenue. Notre équipe a été prévenue de l'incident." %}</p>
-<p>{% trans "Merci de réessayer plus tard." %}</p>
+<p>{% trans "Some internal server error happened. You did nothing wrong, we are to be blamed! Our team has been notified of the issue." %}</p>
+<p>{% trans "Please try again later." %}</p>
 {% endblock %}
