--- a/prologin/users/templates/users/as_staff_warning.html
+++ b/prologin/users/templates/users/as_staff_warning.html
@@ -1,4 +1,4 @@
 {% load i18n %}
 {% if as_staff %}
-<p class="alert alert-warning">{% trans "Attention, vous modifiez les informations d'un utilisateur tiers, en tant que membre de l'équipe." %}</p>
+<p class="alert alert-warning">{% trans "Heads up! You are editing another user's information, as a staff member. Take extra care." %}</p>
 {% endif %}
