--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -4,26 +4,26 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Membres" "#TODO" %}
+	{% breadcrumb "Members" "#TODO" %}
 	{% breadcrumb edited_user "users:profile" edited_user.id %}
-	{% breadcrumb "Modifier" "" %}
+	{% breadcrumb "Edit" "" %}
 {% endblock breadcrumbs %}
 
-{% block title %}{% blocktrans with edited_user.username as username %}Modification du profil de {{ username }}{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}{% endblock %}
 
 {% block content %}
-<h1>{% blocktrans with edited_user.username as username %}Modification du profil de {{ username }}{% endblocktrans %}</h1>
+<h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}</h1>
 
 {% include "users/as_staff_warning.html" %}
 
-<p class="text-right"><a href="{% url 'users:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Modifier le mot de passe" %}</a></p>
+<p class="text-right"><a href="{% url 'users:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Change password" %}</a></p>
 
 <form method="POST" enctype="multipart/form-data" class="form-horizontal">
 	{% csrf_token %}
 	{{ form|bootstrap_horizontal }}
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<input class="btn btn-primary" type="submit" value="{% trans "Enregistrer" %}">
+			<input class="btn btn-primary" type="submit" value="{% trans "Save" %}">
 		</div>
 	</div>
 </form>
