--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -1,17 +1,17 @@
 /*
  * Page layout
  */
-
 @import url(http://fonts.googleapis.com/css?family=Roboto:700,300);
+
 html, body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
-    font-weight: 300;
-    font-size: 1em;
-    color: #494949;
-    text-rendering: optimizelegibility;
+	margin: 0;
+	padding: 0;
+	background-color: white;
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-weight: 300;
+	font-size: 1em;
+	color: #494949;
+	text-rendering: optimizelegibility;
 }
 
 /*
@@ -26,173 +26,198 @@ body {
 */
 
 .main-row {
-    margin-right: 0;
-    padding-left: 20px;
+	margin-right: 0;
+	padding-left: 20px;
 }
 
 #content-block {
-    padding: 0;
-    background-color: white;
+	padding: 0;
+	background-color: white;
 
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-bottom-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-bottom-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 
-    -webkit-border-bottom-right-radius: 5px;
-    -moz-border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;
+	-moz-border-bottom-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 #content-block > div {
-    padding: 10px;
+	padding: 10px;
 }
 
 footer {
-    /*
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 120px;
-    */
-    margin-top: 30px;
-    padding: 30px;
-    color: #efefef;
-    background: url('../img/footer.png') repeat;
+	/*
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 120px;
+	*/
+	margin-top: 30px;
+	padding: 30px;
+	color: #efefef;
+	background: url('../img/footer.png') repeat;
 }
 
 footer h3 {
-    font-size: 1em;
+	font-size: 1em;
 }
 
 footer .nav > li > a {
-    padding: 5px 15px;
+	padding: 5px 15px;
 }
 
 footer a,
 footer a:visited {
-    color: #ccc;
-    font-size: 0.9em;
+	color: #ccc;
+	font-size: 0.9em;
 }
 
 footer a .fa.fa-inverse {
-    color: #ccc;
+	color: #ccc;
 }
+
 footer a:hover .fa.fa-inverse {
-    color: #efefef;
+	color: #efefef;
 }
+
 footer a.social,
 footer a.social:hover {
-    text-decoration: none;
+	text-decoration: none;
 }
+
 footer .legal {
-    margin: 10px 0;
-    font-size: 0.8em;
-    text-align: center;
-    font-variant: small-caps;
+	margin: 10px 0;
+	font-size: 0.8em;
+	text-align: center;
+	font-variant: small-caps;
 }
+
 /*
  * Header
  */
 
 .navbar-default {
-    min-height: 90px;
-    background: none;
-    border: none;
-    background: #35479a;
-    border-radius: 0;
+	min-height: 90px;
+	background: none;
+	border: none;
+	background: #35479a;
+	border-radius: 0;
 }
+
 .navbar-default .navbar-brand {
-    height: 90px;
-    padding: 15px 0;
-    line-height: 1;
-    font-size: 1.6em;
+	height: 90px;
+	padding: 15px 0;
+	line-height: 1;
+	font-size: 1.6em;
 }
+
 .navbar-default .navbar-brand small {
-    font-size: 0.6em;
-    display: block;
+	font-size: 0.6em;
+	display: block;
 }
+
 .navbar-default .navbar-brand a, .navbar-default .navbar-brand a:visited {
-    display: block;
-    position: relative;
-    padding-top: 8px;
-    padding-left: 65px;
-    color: #fefefe;
-    text-decoration: none;
+	display: block;
+	position: relative;
+	padding-top: 8px;
+	padding-left: 65px;
+	color: #fefefe;
+	text-decoration: none;
 }
+
 .navbar-default .navbar-brand a img {
-    position: absolute;
-    left: 0;
-    top: 0;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
+
 .navbar-header {
-    float: none;
+	float: none;
 }
+
 .navbar-default .navbar-toggle {
-    margin: 27px 15px 0;
+	margin: 27px 15px 0;
 }
+
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fefefe;
+	background-color: #fefefe;
 }
+
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
-    background-color: #7389AE;
+	background-color: #7389AE;
 }
+
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border: none;
-    margin-right: 0;
+	border: none;
+	margin-right: 0;
 }
+
 .navbar-default .navbar-collapse {
-    box-shadow: none;
+	box-shadow: none;
 }
+
 .navbar-default .navbar-nav {
-    margin-top: 19px;
+	margin-top: 19px;
 }
+
 .navbar-default .navbar-nav > li > a {
-    color: #fefefe;
+	color: #fefefe;
 }
+
 @media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
-        color: #fefefe;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
-        background: #7389AE;
-    }
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+		color: #fefefe;
+	}
+
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+		background: #7389AE;
+	}
 }
+
 .navbar-default .collapsing .navbar-nav > li.sep,
 .navbar-default .in .navbar-nav > li.sep {
-    display: none;
+	display: none;
 }
+
 .navbar-default .navbar-nav > li.sep > a, .navbar-default .navbar-nav > li.sep > a:hover {
-    cursor: default;
-    background-color: transparent;
+	cursor: default;
+	background-color: transparent;
 }
+
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li.active > a,
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
-    color: #fefefe;
-    background-color: #7389AE;
+	color: #fefefe;
+	background-color: #7389AE;
 }
+
 .navbar-default .dropdown-menu {
-    border-radius: 0;
-    border: none;
-    padding: 0;
+	border-radius: 0;
+	border: none;
+	padding: 0;
 }
+
 .navbar-default .dropdown-menu li.divider {
-    margin: 0;
+	margin: 0;
 }
+
 .navbar-default .dropdown-menu li a {
-    padding: 8px 20px;
+	padding: 8px 20px;
 }
+
 .navbar-default .dropdown-menu li a:hover {
-    background: #7389AE;
-    color: #fefefe;
+	background: #7389AE;
+	color: #fefefe;
 }
 
 /*
@@ -200,18 +225,18 @@ footer .legal {
  */
 
 .breadcrumb > li {
-    font-size: 0.8em;
+	font-size: 0.8em;
 }
 
 .breadcrumb > li > a,
 .breadcrumb > li > a:visited {
-    color: #737ab9;
-    text-shadow: none;
+	color: #737ab9;
+	text-shadow: none;
 }
 
 .breadcrumb > li + li:before {
-    color: #737ab9;
-    content: "›";
+	color: #737ab9;
+	content: "›";
 }
 
 /*
@@ -219,54 +244,54 @@ footer .legal {
  */
 
 #menu-title, #login-title {
-    margin-bottom: 0;
-    padding: 5px;
-    background-color: #202b66;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    text-align: center;
-    color: #fff;
+	margin-bottom: 0;
+	padding: 5px;
+	background-color: #202b66;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	text-align: center;
+	color: #fff;
 }
 
 #main-menu, #login-wrapper {
-    border: 1px solid #202b66;
+	border: 1px solid #202b66;
 }
 
 #login-wrapper {
-    padding: 10px;
+	padding: 10px;
 }
 
 #main-menu, #main-menu ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
 }
 
 #main-menu li {
-    padding: 0;
-    margin: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    background-color: #c6c9d8;
+	padding: 0;
+	margin: 0;
+	font-family: Helvetica, Arial, sans-serif;
+	background-color: #c6c9d8;
 }
 
 #main-menu a, .menu-main-elem {
-    display: block;
-    padding: 5px 10px 5px 10px;
+	display: block;
+	padding: 5px 10px 5px 10px;
 }
 
 .menu-main-elem {
-    color: #33449d;
-    cursor: pointer;
+	color: #33449d;
+	cursor: pointer;
 }
 
 #main-menu .sub-menu a {
-    background-color: #f1f2f2;
+	background-color: #f1f2f2;
 }
 
 #main-menu a:hover, .menu-main-elem:hover, #main-menu .menu-current > a {
-    background-color: #202b66;
-    color: white;
-    text-decoration: none;
+	background-color: #202b66;
+	color: white;
+	text-decoration: none;
 }
 
 #main-menu > .menu-collapsed {
@@ -276,96 +301,98 @@ footer .legal {
 }
 
 #main-menu a, #latest-news a {
-    font-family: Helvetica, Arial, sans-serif;
-    color: #33449d;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #33449d;
 }
 
 #latest-news {
-    margin-left: 0;
-    padding-left: 0;
+	margin-left: 0;
+	padding-left: 0;
 }
 
 #latest-news li {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 #latest-news-pagination .active > a {
-    color: #33449d;
-    background-color: #fff;
-    border-color: #ddd;
+	color: #33449d;
+	background-color: #fff;
+	border-color: #ddd;
 }
-
 
 /*
  * Right column
  */
 
 #sponsors-lst {
-    margin: 0;
-    padding: 10px 0;
-    list-style-type: none;
+	margin: 0;
+	padding: 10px 0;
+	list-style-type: none;
 }
 
 #sponsors-lst > li {
-    margin: 0;
-    padding: 10px;
+	margin: 0;
+	padding: 10px;
 }
 
 .social-bar {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
-
 
 /*
  * Team
  */
 
 .team-member {
-    min-height: 80px;
+	min-height: 80px;
 }
+
 .team-member > div > a {
-    display: inline-block;
-    width: 64px;
-    height: 64px;
-    border-radius: 32px;
-    background-image: url('../img/silhouette.png');
-    background-size: 64px auto;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.3);
+	display: inline-block;
+	width: 64px;
+	height: 64px;
+	border-radius: 32px;
+	background-image: url('../img/silhouette.png');
+	background-repeat: no-repeat;
+	background-position: 0 50%;
+	background-size: 64px auto;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 /*
  * News
  */
 .entry-meta-line:before {
-    content: '\f10d';
-    font-family: 'FontAwesome';
-    position: absolute;
-    left: .7em;
+	content: '\f10d';
+	font-family: 'FontAwesome';
+	position: absolute;
+	left: .7em;
 }
 
 .entry-meta-line {
-    position: relative;
-    padding-left: 2em;
-    /*border-left: 4px solid #ddd;*/
-    /*border-radius: 0 0 0 8px;*/
+	position: relative;
+	padding-left: 2em;
+	/*border-left: 4px solid #ddd;*/
+	/*border-radius: 0 0 0 8px;*/
 }
+
 .news-entry {
-    border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
 }
+
 .news-entry:last-child {
-    border: none;
+	border: none;
 }
 
 /*
  * Misc
  */
 .align-left {
-    text-align: left;
+	text-align: left;
 }
 
 .sponsor {
-    width: 100%;
-    max-width: 220px;
+	width: 100%;
+	max-width: 220px;
 }
